syntax = "proto3";
package loan.loan;

import "loan/tx_history.proto";
import "loan/deposit_earned.proto";
import "loan/borrow_accured.proto";
import "loan/deposit.proto";
import "loan/borrow.proto";
import "loan/apr.proto";
import "loan/user.proto";
// this line is used by starport scaffolding # proto/tx/import

option go_package = "loan/x/loan/types";

// Msg defines the Msg service.
service Msg {
      rpc RequestLoan(MsgRequestLoan) returns (MsgRequestLoanResponse);
  rpc ApproveLoan(MsgApproveLoan) returns (MsgApproveLoanResponse);
  rpc RepayLoan(MsgRepayLoan) returns (MsgRepayLoanResponse);
  rpc LiquidateLoan(MsgLiquidateLoan) returns (MsgLiquidateLoanResponse);
  rpc CancelLoan(MsgCancelLoan) returns (MsgCancelLoanResponse);
rpc CreateTxHistory(MsgCreateTxHistory) returns (MsgCreateTxHistoryResponse);
  rpc UpdateTxHistory(MsgUpdateTxHistory) returns (MsgUpdateTxHistoryResponse);
  rpc DeleteTxHistory(MsgDeleteTxHistory) returns (MsgDeleteTxHistoryResponse);
rpc CreateDepositEarned(MsgCreateDepositEarned) returns (MsgCreateDepositEarnedResponse);
  rpc UpdateDepositEarned(MsgUpdateDepositEarned) returns (MsgUpdateDepositEarnedResponse);
  rpc DeleteDepositEarned(MsgDeleteDepositEarned) returns (MsgDeleteDepositEarnedResponse);
rpc CreateBorrowAccured(MsgCreateBorrowAccured) returns (MsgCreateBorrowAccuredResponse);
  rpc UpdateBorrowAccured(MsgUpdateBorrowAccured) returns (MsgUpdateBorrowAccuredResponse);
  rpc DeleteBorrowAccured(MsgDeleteBorrowAccured) returns (MsgDeleteBorrowAccuredResponse);
rpc CreateDeposit(MsgCreateDeposit) returns (MsgCreateDepositResponse);
  rpc UpdateDeposit(MsgUpdateDeposit) returns (MsgUpdateDepositResponse);
  rpc DeleteDeposit(MsgDeleteDeposit) returns (MsgDeleteDepositResponse);
rpc CreateBorrow(MsgCreateBorrow) returns (MsgCreateBorrowResponse);
  rpc UpdateBorrow(MsgUpdateBorrow) returns (MsgUpdateBorrowResponse);
  rpc DeleteBorrow(MsgDeleteBorrow) returns (MsgDeleteBorrowResponse);
rpc CreateApr(MsgCreateApr) returns (MsgCreateAprResponse);
  rpc UpdateApr(MsgUpdateApr) returns (MsgUpdateAprResponse);
  rpc DeleteApr(MsgDeleteApr) returns (MsgDeleteAprResponse);
rpc CreateUser(MsgCreateUser) returns (MsgCreateUserResponse);
  rpc UpdateUser(MsgUpdateUser) returns (MsgUpdateUserResponse);
  rpc DeleteUser(MsgDeleteUser) returns (MsgDeleteUserResponse);
// this line is used by starport scaffolding # proto/tx/rpc
}

message MsgRequestLoan {
  string creator = 1;
  string amount = 2;
  string fee = 3;
  string collateral = 4;
  string deadline = 5;
}

message MsgRequestLoanResponse {
}

message MsgApproveLoan {
  string creator = 1;
  uint64 id = 2;
}

message MsgApproveLoanResponse {
}

message MsgRepayLoan {
  string creator = 1;
  uint64 id = 2;
}

message MsgRepayLoanResponse {
}

message MsgLiquidateLoan {
  string creator = 1;
  uint64 id = 2;
}

message MsgLiquidateLoanResponse {
}

message MsgCancelLoan {
  string creator = 1;
  uint64 id = 2;
}

message MsgCancelLoanResponse {
}

message MsgCreateTxHistory {
  string creator = 1;
  int32 blockHeight = 2;
  string tx = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgCreateTxHistoryResponse {
  uint64 id = 1;
}

message MsgUpdateTxHistory {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string tx = 4;
  string asset = 5;
  int32 amount = 6;
  string denom = 7;
}

message MsgUpdateTxHistoryResponse {}

message MsgDeleteTxHistory {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteTxHistoryResponse {}

message MsgCreateDepositEarned {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateDepositEarnedResponse {
  uint64 id = 1;
}

message MsgUpdateDepositEarned {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateDepositEarnedResponse {}

message MsgDeleteDepositEarned {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteDepositEarnedResponse {}

message MsgCreateBorrowAccured {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateBorrowAccuredResponse {
  uint64 id = 1;
}

message MsgUpdateBorrowAccured {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateBorrowAccuredResponse {}

message MsgDeleteBorrowAccured {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteBorrowAccuredResponse {}

message MsgCreateDeposit {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateDepositResponse {
  uint64 id = 1;
}

message MsgUpdateDeposit {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateDepositResponse {}

message MsgDeleteDeposit {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteDepositResponse {}

message MsgCreateBorrow {
  string creator = 1;
  int32 blockHeight = 2;
  string asset = 3;
  int32 amount = 4;
  string denom = 5;
}

message MsgCreateBorrowResponse {
  uint64 id = 1;
}

message MsgUpdateBorrow {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  string asset = 4;
  int32 amount = 5;
  string denom = 6;
}

message MsgUpdateBorrowResponse {}

message MsgDeleteBorrow {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteBorrowResponse {}

message MsgCreateApr {
  string creator = 1;
  int32 blockHeight = 2;
  int32 depositApy = 3;
  int32 borrowApy = 4;
}

message MsgCreateAprResponse {
  uint64 id = 1;
}

message MsgUpdateApr {
  string creator = 1;
  uint64 id = 2;
  int32 blockHeight = 3;
  int32 depositApy = 4;
  int32 borrowApy = 5;
}

message MsgUpdateAprResponse {}

message MsgDeleteApr {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteAprResponse {}

message MsgCreateUser {
  string creator = 1;
  repeated bool collateral = 2;
  repeated Deposit deposit = 3;
  repeated Borrow borrow = 4;
  repeated int32 assetBalances = 5;
  repeated DepositEarned depositEarneds = 7;
  repeated BorrowAccured borrowAccureds = 8;
  repeated TxHistory txHistories = 9;
}

message MsgCreateUserResponse {
  uint64 id = 1;
}

message MsgUpdateUser {
  string creator = 1;
  uint64 id = 2;
  repeated bool collateral = 3;
  repeated Deposit deposit = 4;
  repeated Borrow borrow = 5;
  repeated int32 assetBalances = 6;
  repeated DepositEarned depositEarneds = 7;
  repeated BorrowAccured borrowAccureds = 8;
  repeated TxHistory txHistories = 9;
}

message MsgUpdateUserResponse {}

message MsgDeleteUser {
  string creator = 1;
  uint64 id = 2;
}

message MsgDeleteUserResponse {}

// this line is used by starport scaffolding # proto/tx/message
